--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
     </section>
     <section
       class="mainblack"
-      style="background-image: url(./images/cardback2.png); margin-top: 30px"
+      style="background-image: url(./images/cardback3.png); margin-top: 30px"
     >
       <div class="main">
         <h1 id="ourproduct" style="color: white">OUR PRODUCTS</h1>
@@ -268,7 +268,7 @@
     <section
       class="two mt-3 mb-5"
       style="
-        background-image: url(./images/cardback.jpg);
+        background-image: url(./images/callback4.jpg);
         margin: 10%;
         border-radius: 25px;
       "
