--- a/index.html
+++ b/index.html
@@ -131,10 +131,12 @@
               Coldpress Oil | Jaggery
             </h1>
             <p>
-              "sahyadri foods" is recognized as high quality supplier of Quality
-              and Organic goods and services bu providing good and services of
-              the highest standard to meet the needs of our customers in india
-              and reginal markets.
+              "Sahyadri foods was formed with vision to provide a wide range of
+              healthy, natural products which processed by traditional methods
+              without any harmfull refining and chemically process. Retaining
+              the natural quality of products. We are rigidly focused to give
+              people not only our healthy products but also a healthy life style
+              and for that we are commited."
             </p>
           </div>
           <img
