index page update

--- a/index.html
+++ b/index.html
@@ -543,7 +543,7 @@
           style="color: white; font-size: 20px"
         >
           © 2020 Copyright:
-          <a href="https://mdbootstrap.com/"> abcd.com</a>
+          <a href="https://mdbootstrap.com/">VirtualHub</a>
         </div>
       </div>
     </footer>
