--- a/index.html
+++ b/index.html
@@ -510,7 +510,7 @@
             <h5 class="text-uppercase" style="color: white; font-size: 35px">
               Contact US
             </h5>
-            <form style="color: white">
+            <form style="color: white" action="./php/process.php" method="POST">
               <div class="form-group">
                 <label for="exampleInputEmail1">Email address</label>
                 <input
@@ -519,18 +519,26 @@
                   id="exampleInputEmail1"
                   aria-describedby="emailHelp"
                   placeholder="Enter email"
+                  name="email"
+                  required
                 />
               </div>
               <div class="form-group">
                 <label for="exampleInputPassword1">Your Message</label>
-                <input
+                <textarea
                   type="text"
                   class="form-control"
                   id="exampleInputPassword1"
                   placeholder="Enter Your Message"
-                />
+                  name="message"
+                  required
+                ></textarea>
               </div>
-              <button type="submit" class="btn btn-outline-success w-100">
+              <button
+                type="submit"
+                class="btn btn-outline-success w-100"
+                id="submit"
+              >
                 Submit
               </button>
             </form>
@@ -553,6 +561,14 @@
         duration: 1000,
         offset: 280,
       });
+
+      let msg = getElementById("submit");
+      msg.addEventListener("click", sendmsg);
+
+      function sendmsg(e) {
+        e.preventDefault();
+        alert("Message Sent");
+      }
     </script>
   </body>
 </html>
