--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     />
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
     <link
-      href="https://fonts.googleapis.com/css?family=Federo"
+      href="https://fonts.googleapis.com/css?family=ABeeZee"
       rel="stylesheet"
     />
     <link
@@ -26,7 +26,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
   </head>
-  <body style="font-family: 'Federo'">
+  <body style="font-family: 'ABeeZee'">
     <img src="./images/top.png" style="width: 100%; height: 85px" id="topimg" />
     <nav class="navbar navbar-expand-lg navbar-light bg-light" id="navbar">
       <a class="navbar-brand" href="#"><img src="./images/logo1.png" /></a>
@@ -43,7 +43,7 @@
       </button>
 
       <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
-        <ul class="navbar-nav mr-auto mt-2 mt-lg-0 ml-5" id="hover">
+        <ul class="navbar-nav mr-auto mt-2 mt-lg-0" id="hover">
           <li class="nav-item">
             <a class="nav-link act" href="#">HOME</a>
           </li>
@@ -61,97 +61,131 @@
     </nav>
     <br />
 
+    <!--Carousel Wrapper-->
     <div
-      id="carouselExampleControls"
-      class="carousel slide"
+      id="carousel-example-2"
+      class="carousel slide carousel-fade"
       data-ride="carousel"
-      style="background-color: #002633; margin-top: -25px"
+      style="margin-top: -25px"
     >
-      <div class="carousel-inner">
+      <!--Indicators-->
+      <ol class="carousel-indicators">
+        <li
+          data-target="#carousel-example-2"
+          data-slide-to="0"
+          class="active"
+        ></li>
+        <li data-target="#carousel-example-2" data-slide-to="1"></li>
+        <li data-target="#carousel-example-2" data-slide-to="2"></li>
+      </ol>
+      <!--/.Indicators-->
+      <!--Slides-->
+      <div class="carousel-inner" role="listbox">
         <div class="carousel-item active">
-          <img
-            class="d-block w-75 rounded mx-auto d-block"
-            style="margin-top: 70px; margin-bottom: 70px"
-            src="./images/oil1.jpg"
-            alt="First slide"
-          />
+          <div class="view">
+            <img
+              class="d-block w-100"
+              src="./images/slider1.png"
+              alt="First slide"
+            />
+            <div class="mask rgba-black-light"></div>
+          </div>
+          <div class="carousel-caption">
+            <h3 class="h1-responsive" style="font-weight: 700">OIL</h3>
+            <p>First text</p>
+          </div>
         </div>
         <div class="carousel-item">
-          <img
-            class="d-block w-75 rounded mx-auto d-block"
-            style="margin-top: 70px; margin-bottom: 70px"
-            src="./images/slider1.png"
-            alt="Second slide"
-          />
+          <!--Mask color-->
+          <div class="view">
+            <img
+              class="d-block w-100"
+              src="./images/slider2.png"
+              alt="Second slide"
+            />
+            <div class="mask rgba-black-strong"></div>
+          </div>
+          <div class="carousel-caption">
+            <h3 class="h1-responsive" style="font-weight: 700">JAGGERY</h3>
+            <p>Secondary text</p>
+          </div>
         </div>
         <div class="carousel-item">
-          <img
-            class="d-block w-75 rounded mx-auto d-block"
-            style="margin-top: 70px; margin-bottom: 70px"
-            src="./images/slider2.png"
-            alt="Third slide"
-          />
-        </div>
-        <div class="carousel-item">
-          <img
-            class="d-block w-75 rounded mx-auto d-block"
-            style="margin-top: 70px; margin-bottom: 70px"
-            src="./images/slider3.png"
-            alt="Fourth slide"
-          />
+          <!--Mask color-->
+          <div class="view">
+            <img
+              class="d-block w-100"
+              src="./images/slider3.png"
+              alt="Third slide"
+            />
+            <div class="mask rgba-black-slight"></div>
+          </div>
+          <div class="carousel-caption">
+            <h3 class="h1-responsive" style="font-weight: 700">OTHER OILS</h3>
+            <p>Third text</p>
+          </div>
         </div>
       </div>
+      <!--/.Slides-->
+      <!--Controls-->
       <a
         class="carousel-control-prev"
-        href="#carouselExampleControls"
+        href="#carousel-example-2"
         role="button"
         data-slide="prev"
       >
         <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-        <span class="sr-only" style="color: black">Previous</span>
+        <span class="sr-only">Previous</span>
       </a>
       <a
         class="carousel-control-next"
-        href="#carouselExampleControls"
+        href="#carousel-example-2"
         role="button"
         data-slide="next"
       >
         <span class="carousel-control-next-icon" aria-hidden="true"></span>
-        <span class="sr-only" style="color: black">Next</span>
+        <span class="sr-only">Next</span>
       </a>
+      <!--/.Controls-->
     </div>
+    <!--/.Carousel Wrapper-->
+    <div id="some-box">
+      <!-- <span class="bg">ABOUT US</span> -->
+      <h1>Sahyadri Foods</h1>
 
-    <section style="margin-top: -140px">
-      <div class="wrapper" style="text-align: center; font-family: 'Federo'">
-        <div class="outer" data-aos="fade-right" id="about">
-          <div class="content ml-2">
-            <span class="bg">ABOUT US</span>
-            <h1 class="mt-2">
-              SAHYADRI FOODS<br />
-              Coldpress Oil | Jaggery
-            </h1>
-            <p>
-              "Sahyadri foods was formed with vision to provide a wide range of
-              healthy, natural products which processed by traditional methods
-              without any harmfull refining and chemically process. Retaining
-              the natural quality of products. We are rigidly focused to give
-              people not only our healthy products but also a healthy life style
-              and for that we are commited."
-            </p>
-          </div>
-          <img
-            src="./images/about.jpg"
-            width="550px"
-            class="animated fadeInRight"
-            id="img3"
-            style="opacity: 0.3"
-          />
+      <article class="row" id="idea-one" data-aos="fade-right">
+        <div><img src="./images/about1.jpg" /></div>
+        <div>
+          <h3>Coldpress Oil</h3>
+          <p>
+            "Sahyadri foods was formed with vision to provide a wide range of
+            healthy, natural products which processed by traditional methods
+            without any harmfull refining and chemically process."
+          </p>
+          <a href="#">Link to read more</a>
         </div>
-      </div>
-    </section>
+      </article>
+
+      <article class="row" id="idea-two" data-aos="fade-left">
+        <div>
+          <h3>Jaggery</h3>
+          <p>
+            "Retaining the natural quality of products. We are rigidly focused
+            to give people not only our healthy products but also a healthy life
+            style and for that we are commited."
+          </p>
+          <a href="#">Link to read more</a>
+        </div>
+        <div><img src="./images/about2.jpg" /></div>
+      </article>
+    </div>
     <section
       class="mainblack"
-      style="background-image: url(./images/cardback3.png); margin-top: 30px"
+      style="
+        background-image: url(./images/cardback4.png);
+        background-size: cover;
+        margin-top: 120px;
+      "
     >
       <div class="main">
         <h1 id="ourproduct" style="color: white">OUR PRODUCTS</h1>
@@ -166,11 +200,11 @@
                   Coldpress Oil
                 </h2>
                 <p class="card_text mt-3" style="font-size: 15px">
-                  1.GROUNDNUT OIL<br />
-                  2.COCUNUT OIL<br />
-                  3.SANFLOWER OIL<br />
-                  4.MUSTERED OIL<br />
-                  5.SESAME OIL<br />
+                  • GROUNDNUT OIL<br />
+                  • COCUNUT OIL<br />
+                  • SANFLOWER OIL<br />
+                  • MUSTERED OIL<br />
+                  • SESAME OIL<br />
                 </p>
                 <!-- <button class="btn card_btn" id="btn1">Read More</button> -->
               </div>
@@ -184,11 +218,11 @@
               <div class="card_content">
                 <h2 class="card_title">GROUNDNUT OIL</h2>
                 <p class="card_text">
-                  1.Prevent and soothes cardiovascular disease<br />
-                  2.lowers the share of bad Cholestrol in blood.<br />
-                  3.Helps to prevent heart attack and stroke.<br />
-                  4.Stilulated reproductive gland action.<br />
-                  5.Helps to lower blood pressure.
+                  • Prevent and soothes cardiovascular disease<br />
+                  • lowers the share of bad Cholestrol in blood.<br />
+                  • Helps to prevent heart attack and stroke.<br />
+                  • Stilulated reproductive gland action.<br />
+                  • Helps to lower blood pressure.
                 </p>
                 <!-- <button class="btn card_btn" id="btn1" style="">Read More</button> -->
               </div>
@@ -202,10 +236,10 @@
               <div class="card_content">
                 <h2 class="card_title">COCUNUT OIL</h2>
                 <p class="card_text">
-                  1.Helps in easy digestion.<br />2.Reduce body fat but helps
-                  retain muscle mass.<br />3.remedical for insomnia producing
-                  sleep harmones.<br />4.Prevent wrinkles, sagging skin,skin
-                  dryness and flaking.<br />5.Rich in lauric acid, helps
+                  • Helps in easy digestion.<br />• Reduce body fat but helps
+                  retain muscle mass.<br />• Remedical for insomnia producing
+                  sleep harmones.<br />• Prevent wrinkles, sagging skin,skin
+                  dryness and flaking.<br />• Rich in lauric acid, helps
                   maintain blood sugar & colestrol.
                 </p>
                 <!-- <button class="btn card_btn" id="btn1">Read More</button> -->
@@ -220,9 +254,9 @@
               <div class="card_content">
                 <h2 class="card_title">SANFLOWER OIL</h2>
                 <p class="card_text">
-                  1.Helps to regulates cholestrol levels in body.<br />2.Aids in
-                  managing diabetes.<br />3.Effective remedy against obesity.<br />4.Aids
-                  in regulating Menstrual cycles.<br />5.Bosst quality and
+                  • Helps to regulates cholestrol levels in body.<br />• Aids in
+                  managing diabetes.<br />• Effective remedy against obesity.<br />•
+                  Aids in regulating Menstrual cycles.<br />• Bosst quality and
                   appearance of skin.
                 </p>
                 <!-- <button class="btn card_btn" id="btn1">Read More</button> -->
@@ -237,9 +271,9 @@
               <div class="card_content">
                 <h2 class="card_title">MUSTERED OIL</h2>
                 <p class="card_text">
-                  1.Reduse the risk of cancer.<br />2.Treats rashes nad fungal
-                  infection.<br />3.Stimulates sweet glands.<br />4.Work as
-                  natural sunscreen.<br />5.Fight bacterial infections in colon,
+                  • Reduse the risk of cancer.<br />• Treats rashes nad fungal
+                  infection.<br />• Stimulates sweet glands.<br />• Work as
+                  natural sunscreen.<br />• Fight bacterial infections in colon,
                   urinary fract and digestive system.
                 </p>
                 <!-- <button class="btn card_btn" id="btn1">Read More</button> -->
@@ -254,10 +288,10 @@
               <div class="card_content">
                 <h2 class="card_title">SESAME OIL</h2>
                 <p class="card_text">
-                  1.Improve blood profile.<br />2.Prevent spleen disease.<br />3.Act
-                  as mild laxative<br />4.Slows down the ageing process, greying
-                  of hair and development of dementia.<br />5.Helps in natural
-                  cure of anemia.<br />6.fights stress and depression.
+                  • Improve blood profile.<br />• Prevent spleen disease.<br />•
+                  Act as mild laxative<br />• Slows down the ageing process,
+                  greying of hair and development of dementia.<br />• Helps in
+                  natural cure of anemia.<br />• Fights stress and depression.
                 </p>
                 <!-- <button class="btn card_btn" id="btn1">Read More</button> -->
               </div>
@@ -275,7 +309,11 @@
         border-radius: 25px;
       "
     >
-      <div class="card" style="width: 22rem; border-radius: 20px">
+      <div
+        class="card"
+        style="width: 22rem; border-radius: 20px"
+        data-aos="fade-right"
+      >
         <img
           class="card-img-top"
           src="./images/card6.png"
@@ -284,16 +322,20 @@
         <div class="card_content">
           <h2 class="card_title">JAGGERY<br />(solid,liquid,powder,candy)</h2>
           <p class="card_text" id="p" style="margin-left: 1px">
-            1.Natural sweetner and good source of nutrients.<br />2.Aids in
-            digestion and reduces constipution.<br />3.Helps to purify blood.<br />4.Natural
-            anti-axidant and helps to build stronger immunity.<br />5.Natural
-            detox agent, by flushing out nasty toxins from body.<br />6.Good
-            source of iron and various minerals.
+            • Natural sweetner and good source of nutrients.<br />• Aids in
+            digestion and reduces constipution.<br />• Helps to purify blood.<br />•
+            Natural anti-axidant and helps to build stronger immunity.<br />•
+            Natural detox agent, by flushing out nasty toxins from body.<br />•
+            Good source of iron and various minerals.
           </p>
           <!-- <button class="btn card_btn" id="btn1">Read More</button> -->
         </div>
       </div>
-      <div class="card" style="width: 22rem; border-radius: 20px">
+      <div
+        class="card"
+        style="width: 22rem; border-radius: 20px"
+        data-aos="fade-left"
+      >
         <img
           class="card-img-top"
           src="./images/card7.png"
@@ -302,10 +344,10 @@
         <div class="card_content">
           <h2 class="card_title">ROCK SOLT</h2>
           <p class="card_text" id="p" style="margin-left: 1px">
-            1.It contains 84 essential minarals.<br />2.Acts as detoxifier.<br />3.Fasters
-            healthy pH balance.<br />4.Boosts bone strength and prevents muscle
-            crams.<br />5.Helps to lower the blood pressure.<br />6.More natural
-            iodine cantent.
+            • It contains 84 essential minarals.<br />• Acts as detoxifier.<br />•
+            Fasters healthy pH balance.<br />• Boosts bone strength and prevents
+            muscle crams.<br />• Helps to lower the blood pressure.<br />• More
+            natural iodine cantent.
           </p>
           <!-- <button class="btn card_btn" id="btn1">Read More</button> -->
         </div>
@@ -316,7 +358,7 @@
         <div class="text-center mb-5">
           <span class="text-secondary text-uppercase">Testimonials</span>
           <h1 class="text-capitalize font-weight-bold mt-2">
-            What Our <span style="color: #49bf4c">Clients say?</span>
+            What Our <span style="color: #49bf4c">Customer say?</span>
           </h1>
         </div>
         <div class="row flex justify-content-between">
@@ -442,6 +484,13 @@
         </div>
       </div>
     </section>
+
+    <img
+      src="./images/curve.png"
+      width="100%"
+      style="height: 400px"
+      id="curve"
+    />
 
     <!-- Footer -->
     <footer
